--- a/Review-Service/src/main/resources/application.properties
+++ b/Review-Service/src/main/resources/application.properties
@@ -10,3 +10,19 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=update
 
+
+# Set logging level for your package
+logging.level.com.metlife=INFO
+
+# Appender configuration
+appender.stdout.type=Console
+appender.stdout.name=STDOUT
+appender.stdout.layout.type=PatternLayout
+appender.stdout.layout.pattern=%d{HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n
+
+# Root logger configuration
+rootLogger.level=INFO
+rootLogger.appenderRefs=stdout
+rootLogger.appenderRef.stdout.ref=STDOUT
+
+
