--- a/Hotel-Service/src/main/resources/application.properties
+++ b/Hotel-Service/src/main/resources/application.properties
@@ -1,12 +1,18 @@
-spring.application.name=HOTEL-SERVICE
-server.port=8081
+#spring.application.name=HOTEL-SERVICE
+#server.port=8081
+#spring.cloud.config.import=optional:config server:http://localhost:8888
+#spring.profiles.active=dev
 
 # DataSource settings: MySQL Database
-spring.datasource.url=jdbc:mysql://localhost:3306/hotel_management_db?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=Admin@123
+#spring.datasource.url=jdbc:mysql://localhost:3306/hotel_management_db?useSSL=false&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=Admin@123
+#
+## Hibernate settings
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.hibernate.ddl-auto=update
 
-# Hibernate settings
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-spring.jpa.hibernate.ddl-auto=update
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+
