--- a/Config-Server/src/main/resources/application.properties
+++ b/Config-Server/src/main/resources/application.properties
@@ -3,4 +3,6 @@ server.port=8888
 
 spring.cloud.config.server.git.uri=https://github.com/rahulmlhub/profile.git
 spring.cloud.config.server.git.default-label=main
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
 
