--- a/HOTEL-API-GATEWAY/src/main/resources/application.yml
+++ b/HOTEL-API-GATEWAY/src/main/resources/application.yml
@@ -14,16 +14,28 @@ spring:
             - Path=/api/hotels/**
           filters:
             - AuthenticationFilter
+        - id: BOOKING-SERVICE
+          uri: lb://BOOKING-SERVICE
+          predicates:
+            - Path=/api/bookings/**
+          filters:
+            - AuthenticationFilter
         - id: GUEST-SERVICE
           uri: lb://GUEST-SERVICE
           predicates:
-            - Path=/restaurant/**
+            - Path=/api/guests/**
+          filters:
+            - AuthenticationFilter
+        - id: REVIEW-SERVICE
+          uri: lb://REVIEW-SERVICE
+          predicates:
+            - Path=/api/reviews/**
           filters:
             - AuthenticationFilter
         - id: IDENTITY-SERVICE
           uri: lb://IDENTITY-SERVICE
           predicates:
-            - Path=/auth/**
+            - Path=/auth/**, /api/users/**
           filters:
             - AuthenticationFilter
 
