--- a/ForntEnd/hotel_management/tsconfig.json
+++ b/ForntEnd/hotel_management/tsconfig.json
@@ -1,4 +1,3 @@
-/* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
   "compileOnSave": false,
   "compilerOptions": {
@@ -22,7 +21,8 @@
     "lib": [
       "ES2022",
       "dom"
-    ]
+    ],
+    "types": ["jquery"] // Merge this line into the compilerOptions object
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
